# kimix-lark-bot

./: .gitignore  AGENTS.md  README.md  bot.example.yaml  bot_watcher.py  config.example.yaml  pyproject.toml  sse_cli.py
.opencode/skills/kimix-dev/: SKILL.md
docs/: project_review_report.md  setup_feishu_bot.md
src/kimix_lark_bot/: __init__.py  __main__.py  agent.py  brain.py  card_renderer.py  config.py  context.py  handlers.py  kimix_client.py  kimix_client_x.py  log_formatter.py  long_output_handler.py  messaging.py  paths.py  process_manager.py  session_state.py  task_logger.py  watcher.py
src/kimix_lark_bot/commands/: __init__.py  registry.py
src/kimix_lark_bot/feishu_card_kit/: README.md  __init__.py  handler.py  renderer.py  tracker.py
src/kimix_lark_bot/feishu_card_kit/renderer/: __init__.py  _constants.py  _deps.py  _dialog.py  _help.py  (+3 more)
src/kimix_lark_bot/handler/: __init__.py  base.py  help_handler.py  message_handler.py  plan_executor.py  status_handler.py  task_handler.py  workspace_handlers.py
src/kimix_lark_bot/handlers/: __init__.py  base.py  card_action.py  command_handlers.py  lifecycle_manager.py  message_handler.py  plan_executor.py  self_update_handler.py  task_handler.py  welcome_handler.py  workspace_handlers.py
src/kimix_lark_bot/messaging/: __init__.py  client.py
src/kimix_lark_bot/oc_client/: __init__.py  client.py  process_manager.py  session_runner.py  sse_parser.py  sse_printer.py
src/kimix_lark_bot/opencode/: __init__.py  client.py  compatibility.py  process_manager.py  session_runner.py  sse_parser.py  sse_printer.py
(+10 files in other folders)
